`Added Pinecone database integration and vector service functionality`

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@google/genai": "^1.21.0",
+    "@pinecone-database/pinecone": "^6.1.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
