updated frontend to use Redux for user authentication`

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
