--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
