--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "google-auth-library": "^10.4.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2"
   }
