--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "react-syntax-highlighter": "^15.6.6",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
