--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "socket.io": "^4.8.1"
   }
 }
