--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_BACKEND_URI=https://nexie.onrender.com 
+VITE_BACKEND_URI=https://nexie.onrender.com/api
 
 VITE_GOOGLE_CLIENT_ID=868245929553-bfhmjn35fce2v93d5j49uqq0pnv1coaj.apps.googleusercontent.com
