Tavily MCP connected -01

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "@google/genai": "^1.21.0",
+    "@modelcontextprotocol/sdk": "^1.24.3",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@tavily/core": "^0.5.14",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
