--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "description": "",
   "dependencies": {
     "@google/genai": "^1.21.0",
