feat: Update backend dependencies and refactor AI service to use LangChain; enhance socket server for message handling
- Added new LangChain dependencies in package.json for improved AI capabilities.
- Refactored ai.service.js to implement LangChain's ChatGoogleGenerativeAI and TavilySearch for better response generation.
- Updated socket.server.js to utilize LangChain message types for improved message handling and context management.
- Modified ChatPage.jsx to connect to the backend using a constant URI for easier configuration.

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,16 @@
   "description": "",
   "dependencies": {
     "@google/genai": "^1.21.0",
+    "@langchain/community": "^1.1.4",
+    "@langchain/core": "^1.1.15",
+    "@langchain/google-genai": "^2.1.10",
+    "@langchain/langgraph": "^1.1.0",
+    "@langchain/tavily": "^1.2.0",
     "@pinecone-database/pinecone": "^6.1.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "google-auth-library": "^10.4.0",
